Re-organize such that we do current stable only, V5 is out of support